# Widgets

./: .clang-format  .gitignore  get_srcfiles.sh  memory_test.sh  meson.build  run.sh
include/: Application.hpp
include/Components/: Bar.hpp
include/Handlers/: GEventHandler.hpp  GEventListener.hpp
include/Utils/: CSSUtil.hpp  PathUtil.hpp  ProcessUtil.hpp
include/Widgets/: Box.hpp  Clock.hpp  ClonerButton.hpp  Label.hpp  Widget.hpp  Window.hpp
include/Windows/: Bar.hpp
src/: main.cpp
src/Application/: ApplicationCSS.cpp  ApplicationGetters.cpp  ApplicationMain.cpp  ApplicationWindows.cpp
src/Utils/: CSSUtil.cpp  PathUtil.cpp
src/Widgets/: Box.cpp  Label.cpp  Widget.cpp  Window.cpp
styles/: main.scss
styles/bar/: bar.scss  index.scss
subprojects/gtkwidgetspp/: meson.build
subprojects/gtkwidgetspp/include/Utils/: CSSUtil.hpp  PathUtil.hpp  ProcessUtil.hpp
subprojects/gtkwidgetspp/include/Widgets/: Box.hpp  Button.hpp  Label.hpp  Widget.hpp  Window.hpp
subprojects/gtkwidgetspp/src/Utils/: CSSUtil.cpp
subprojects/gtkwidgetspp/src/Widgets/: Box.cpp  Button.cpp  Label.cpp  Widget.cpp  Window.cpp
